# ghcjs-dom-delegator

./: LICENSE  README.markdown  default.nix  ghcjs-dom-delegator.cabal
dom-delegator/: lib.js  lib.require.js  package.json
example/: Example.hs  index.html
jsbits/: dom-delegator.js
src/GHCJS/: DOMDelegator.hs
src/GHCJS/DOMDelegator/: Internal.hs
