name:                ghcjs-dom-delegator
version:             0.0
synopsis:            Experimental dom-delegator bindings for GHCJS
description:         dom-delegator binding
license:             MIT
license-file:        LICENSE
author:              Ian-Woo Kim
maintainer:          ianwookim@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  dom-delegator/lib.require.js
                     dom-delegator/LICENSE
                     README.markdown

flag build-example
  description: build the example program
  default: False
  manual: True

library
  js-sources: jsbits/dom-delegator.js
              dom-delegator/lib.js
  ghcjs-options: -O2 -Wall
  exposed-modules:     GHCJS.DOMDelegator
  other-modules:       GHCJS.DOMDelegator.Internal
  build-depends:       base >=4.7,
                       ghcjs-ffiqq,
                       ghcjs-base,
                       ghcjs-prim,
                       split,
                       template-haskell
  hs-source-dirs:      src
  default-language:    Haskell2010

